# Splatink-Discord-Webhook

./: .gitignore  Cargo.toml  README.md
src/: error.rs  main.rs  schedule_data.rs  splatfest_data.rs
