[package]
name = "splatink_discord_webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
webhook = "2.1.2"
